# finartha-v3

./: .gitignore  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: ai_services.py  analytics.py  stock_market.py
ui/: chat.py  forecast.py  guides.py  market.py  planning.py  reports.py  sidebar.py  theme.py
