[tool.poetry]
name = "finartha-v3"
version = "0.1.0"
description = "Finance AI Assistant with Gemini Forecast"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "finartha_v3" }]  # <-- package folder

[tool.poetry.dependencies]
python = "^3.11"
# ...same deps...

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"



