# finartha-v3/pyproject.toml
[project]
name = "finartha_v3"                       # use underscore to avoid package-name quirks
version = "0.1.0"
description = "Finance AI Assistant with Gemini Forecast"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit",
  "pandas",
  "numpy",
  "matplotlib>=3.8",
  "yfinance>=0.2.40",
  "google-generativeai>=0.7.0",
  "python-dateutil",
  "requests",
]

[build-system]
requires = ["pdm-backend>=2.4"]
build-backend = "pdm.backend"




